--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Under Construction
+Pixelitor Launcher
+
+Pixelitaor is an open source image editor by László Balázs-Csíki
+
+https://pixelitor.sourceforge.io/
+
+Due to the lack of documentation I made this very simple Linux launcher for anyone without the technical skills who would like to use Pixelitor.
+
+Just download the zip file, unzip anywhere and read the instructions.
