--- a/README
+++ b/README
@@ -4,6 +4,6 @@ Pixelitaor is an open source image editor by László Balázs-Csíki
 
 https://pixelitor.sourceforge.io/
 
-Due to the lack of documentation I made this very simple Linux launcher for anyone without the technical skills who would like to use Pixelitor.
+Due to the lack of documentation for the standalone Jar Version of the App, I made this very simple Linux launcher for anyone without the technical skills who would like to use Pixelitor "Portable" version.
 
 Just download the zip file, unzip anywhere and read the instructions.
