--- a/README
+++ b/README
@@ -6,4 +6,4 @@ https://pixelitor.sourceforge.io/
 
 Due to the lack of documentation for the standalone Jar Version of the App, I made this very simple Ubuntu Linux launcher for anyone without the technical skills who would like to use Pixelitor 'Portable' version.
 
-Just download the zip file, unzip anywhere and read the instructions.
+Just download the zip file, unzip it and read the instructions.
